# rusty-tris

./: .gitignore  Cargo.toml  README.md
game/: Cargo.toml
game/src/: board.rs  interface.rs  lib.rs
tris/: Cargo.toml
tris/src/: main.rs
