[workspace]
resolver = "3"
members = [
    "game",
    "tris" # Entry point
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CieriA"]
license = "ISC"
repository = "https://github.com/CieriA/rusty-tris"
readme = "README.md"

[workspace.dependencies]
game = { path = "game" }
sdl2 = { version = "0.37.0", features = ["ttf"] }
